--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,285 +1,121 @@
-/* ----------- 💫 https://github.com/JaKooLit 💫 -------- */
-/* ....................................*/
-/* ..........Half Moon.................. */
-/* NOTE: This is only for some waybar configs */
-/* --- 👍 shared by https://github.com/TomekBobrowicz  👍 --- */
+/* ---- 💫 https://github.com/JaKooLit 💫 ---- */
+/* Simple Style */
+
+@define-color background #1d2021;
+@define-color foreground #ebdbb2;
+@define-color dim #928374;
+@define-color yellow #fabd2f;
+@define-color red #fb4934;
+@define-color green #b8bb26;
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "JetBrains Mono Nerd Font";
     font-weight: bold;
     min-height: 0;
     /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
     font-size: 97%;
     font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
-}
 
+}
 
 window#waybar {
-    background-color: rgba(26, 27, 38, 0);
-    border-bottom: 1px solid rgba(26, 27, 38, 0);
-    border-radius: 0px;
-    color: #E6B673;
-}
-
-#waybar.empty,
-#waybar.tiled,
-#waybar.floating {
-    background-color: transparent;
-}
-
-window#waybar.empty,
-window#waybar.empty #window {
-    background-color: transparent;
-}
-
-#taskbar,
-#workspaces {
-    background: #0F1419;
-    margin: 5px;
-    padding: 0px 1px;
-    border-radius: 15px;
-    border: 0px;
-    font-style: normal;
-    color: #0F1419;
+    background: @background;
+    color: @foreground;
+    transition-property: background-color;
+    transition-duration: 0.5s;
 }
 
 #taskbar button,
 #workspaces button {
-    padding: 0px 5px;
-    margin: 4px 3px;
-    border-radius: 15px;
-    border: 0px;
-    color: #0F1419;
-    background: linear-gradient(45deg, #95E6CB, #59C2FF, #D2A6FF);
-    opacity: 0.5;
-    transition: all 0.3s cubic-bezier(.55, -0.68, .48, 1.682);
+    color: @foreground;
 }
 
 #taskbar button.active,
 #workspaces button.active {
-    padding: 0px 5px;
-    margin: 4px 3px;
-    border-radius: 15px;
-    border: 0px;
-    color: #0F1419;
-    background: linear-gradient(45deg, #59C2FF, #D2A6FF);
-    opacity: 1.0;
-    min-width: 40px;
-    transition: all 0.3s cubic-bezier(.55, -0.68, .48, 1.682);
+    border-bottom: 1px solid green;
 }
 
-#workspaces button:hover {
-    border-radius: 15px;
-    color: #0F1419;
-    background: linear-gradient(45deg, #59C2FF, #D2A6FF);
-    opacity: 0.8;
-    transition: all 0.3s cubic-bezier(.55, -0.68, .48, 1.682);
-
+#taskbar button.urgent,
+#workspaces button.urgent {
+    border-bottom: 2px solid red;
 }
 
-@keyframes gradient_horizontal {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-@keyframes swiping {
-    0% {
-        background-position: 0% 200%;
-    }
-
-    100% {
-        background-position: 200% 200%;
-    }
-}
-
-tooltip {
-    background: #0F1419;
-    border: 1px solid #D2A6FF;
-    border-radius: 10px;
-}
-
-tooltip label {
-    color: #F3F4F5;
-}
-
-#window {
-    color: #E6E1CF;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#temperature,
-#memory {
-    color: #E6B673;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#custom-light_dark,
-#custom-swaync,
-#idle_inhibitor,
-#clock {
-    color: #B8CC52;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#bluetooth {
-    color: blue;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#power-profiles-daemon,
-#custom-cycle_wall,
-#cpu {
-    color: #F3F4F5;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#disk {
-    color: #B8CC52;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
+#submap {
+    border-bottom: 1px solid red;
 }
 
 #backlight,
-#battery {
-    color: #F07178;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#mpris {
-    color: #F07178;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding-left: 8px;
-    padding-right: 2px;
-}
-
-#backlight {
-    color: white;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#network {
-    color: #FF8F40;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#custom-hyprbindings {
-    color: #D2A6FF;
-    background: #0F1419;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#tray {
-    color: #E6E1CF;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#pulseaudio {
-    color: #59C2FF;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#custom-notification {
-    color: #95E6CB;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#custom-weather {
-    color: #59C2FF;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
-#custom-menu {
-    color: #59C2FF;
-    background: #0F1419;
-    border-radius: 0px 15px 50px 0px;
-    margin: 5px 5px 5px 0px;
-    padding: 1px 15px;
-}
-
-#custom-power {
-    color: #D2A6FF;
-    background: #0F1419;
-    border-radius: 15px 0px 0px 50px;
-    margin: 5px 0px;
-    padding: 2px 5px 2px 15px;
-}
-
-#custom-lock {
-    color: red;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
-}
-
+#backlight-slider,
+#battery,
+#bluetooth,
+#clock,
+#cpu,
+#disk,
+#idle_inhibitor,
+#keyboard-state,
+#memory,
+#mode,
+#mpris,
+#network,
+#power-profiles-daemon,
+#pulseaudio,
+#pulseaudio-slider,
+#taskbar button,
+#taskbar,
+#temperature,
+#tray,
+#window,
+#wireplumber,
+#workspaces,
+#custom-backlight,
+#custom-cycle_wall,
+#custom-hint,
+#custom-keyboard,
+#custom-light_dark,
+#custom-lock,
+#custom-menu,
 #custom-power_vertical,
-#keyboard-state {
-    color: green;
-    background: #0F1419;
-    border-radius: 50px 50px;
-    margin: 5px;
-    padding: 2px 15px;
+#custom-power,
+#custom-swaync,
+#custom-updater,
+#custom-weather,
+#custom-weather.clearNight,
+#custom-weather.cloudyFoggyDay,
+#custom-weather.cloudyFoggyNight,
+#custom-weather.default,
+#custom-weather.rainyDay,
+#custom-weather.rainyNight,
+#custom-weather.severe,
+#custom-weather.showyIcyDay,
+#custom-weather.snowyIcyNight,
+#custom-weather.sunnyDay {
+    color: @foreground;
+    padding: 3px 6px 3px 6px;
 }
 
-#battery.critical:not(.charging) {
-    color: #f53c3c;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+#battery.warning,
+#disk.warning,
+#memory.warning,
+#cpu.warning {
+    border-top: 3px solid @background;
+    border-bottom: 3px solid yellow;
+}
+
+#battery.critical,
+#disk.critical,
+#memory.critical,
+#cpu.critical {
+    border-top: 3px solid @background;
+    border-bottom: 3px solid red;
+}
+
+#temperature.critical {
+    background-color: red;
+}
+
+#battery.charging {
+    border-top: 3px solid @background;
+    border-bottom: 3px solid green;
 }
 
 #pulseaudio-slider slider {
@@ -295,13 +131,13 @@ tooltip label {
     min-width: 80px;
     min-height: 5px;
     border-radius: 5px;
-    background-color: #6E6A86;
+    background-color: @dim;
 }
 
 #pulseaudio-slider highlight {
     min-height: 10px;
     border-radius: 5px;
-    background-color: purple;
+    background-color: @green;
 }
 
 #backlight-slider slider {
@@ -317,11 +153,11 @@ tooltip label {
     min-width: 80px;
     min-height: 10px;
     border-radius: 5px;
-    background-color: #6E6A86;
+    background-color: @dim;
 }
 
 #backlight-slider highlight {
     min-width: 10px;
     border-radius: 5px;
-    background-color: purple;
+    background-color: @green;
 }
