--- a/eww/bar_2/eww.scss
+++ b/eww/bar_2/eww.scss
@@ -369,4 +369,37 @@ button:hover {
 
 .hover-module {}
 
+.systray {
+  color: #cdd6f4;
+  font-size: 12px;
+}
+
+.systray menu {
+  border-radius: 10px;
+  padding: 5px 0px;
+
+  background-color: white;
+
+  >menuitem {
+    padding: 5px 5px;
+
+    &:disabled label {
+      color: gray;
+    }
+
+    &:hover {
+      background-color: #0e4679;
+    }
+  }
+
+  separator {
+    background-color: #222222;
+    padding-top: 1px;
+
+    &:last-child {
+      padding: unset;
+    }
+  }
+}
+
 /** EOF *************************************************/
