--- a/eww/bar_2/eww.scss
+++ b/eww/bar_2/eww.scss
@@ -55,6 +55,7 @@ $urgent: $red;
   background-size: 40px;
   min-height: 40px;
   min-width: 40px;
+  border-radius: 13px;
 }
 
 .workspace {
@@ -134,6 +135,7 @@ $urgent: $red;
   min-height: 24px;
   min-width: 24px;
   margin: 0px;
+  border-radius: 50%;
 }
 
 .trackbutton {
@@ -142,6 +144,7 @@ $urgent: $red;
   min-height: 18px;
   min-width: 18px;
   margin: 3px 0px 0px 0px;
+  border-radius: 50%;
 }
 
 /** System *************************************************/
@@ -402,6 +405,14 @@ button:hover {
       padding: unset;
     }
   }
+}
+
+.hover {
+  transition: box-shadow .3s;
+}
+
+.hover:hover {
+  box-shadow: 0 0 11px #3c3c3c;
 }
 
 /** EOF *************************************************/
