--- a/eww/bar_2/eww.scss
+++ b/eww/bar_2/eww.scss
@@ -415,4 +415,8 @@ button:hover {
   box-shadow: 0 0 11px #3c3c3c;
 }
 
+.song-time {
+  font-size: 16px;
+}
+
 /** EOF *************************************************/
