✨ [-] Scale height updated

--- a/eww/bar_2/eww.scss
+++ b/eww/bar_2/eww.scss
@@ -239,6 +239,7 @@ $urgent: $red;
   background-color: $lightmagenta;
   color: $black;
   border-radius: 10px;
+  min-height: 10px;
 }
 
 .metric scale trough {
