--- a/eww/bar_2/eww.scss
+++ b/eww/bar_2/eww.scss
@@ -185,7 +185,7 @@ $urgent: $red;
 }
 
 .border-right {
-  border-right: 2px solid red;
+  border-right: 2px solid #FFC8C8;
   margin-right: 5px;
 }
 
@@ -418,6 +418,55 @@ button:hover {
 
 .song-time {
   font-size: 16px;
+}
+
+// Calendar
+.cal {
+  background-color: $gray;
+  font-family: JetBrainsMono Nerd Font;
+  font-size: 18px;
+  font-weight: normal;
+  border-radius: 10px;
+
+  .cal-in {
+    padding: 0px 10px 0px 10px;
+    color: #bfc9db;
+
+    .cal {
+      &.highlight {
+        padding: 20px;
+      }
+
+      padding: 5px 5px 5px 5px;
+      margin-left: 10px;
+    }
+  }
+}
+
+calender {
+  color: #bfc9db;
+}
+
+calendar:selected {
+  color: #a1bdce;
+}
+
+calendar.header {
+  color: #a1bdce;
+  font-weight: bold;
+}
+
+calendar.button {
+  color: #afbea2;
+}
+
+calendar.highlight {
+  color: #a1bdce;
+  font-weight: bold;
+}
+
+calendar:indeterminate {
+  color: #bfc9db;
 }
 
 /** EOF *************************************************/
